--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-18 [时隔六年半 中英领导人首次会晤](/articles/dw/1023660.md)
+
 11-18 [美允许乌克兰远程攻击俄腹地 盟友是否跟进？](/articles/dw/1023661.md)
 
 11-18 [特朗普提名马斯克盟友卡尔领导媒体监管](/articles/dw/1023662.md)
@@ -598,6 +600,4 @@
 10-19 [大疆向美国国防部提出诉讼](/articles/dw/1023958.md)
 
 10-19 [德国推出30项新措施吸引印度技术工人](/articles/dw/1023959.md)
-
-10-19 [英外相访华谈敏感话题 中方:台港不容干涉](/articles/dw/1023960.md)
 
