--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-18 [每日一语 2024.11.18](/articles/cdt/335351.md)
+
+11-18 [四环青年｜村道新换井盖一碰就碎，劣质井盖哪来的？](/articles/cdt/335353.md)
+
+11-18 [亮见｜安娜草堂启示录：谁敢说真话，谁就有病](/articles/cdt/335355.md)
+
 11-18 [冷月冷言｜突发事件信息发布不能被垄断](/articles/cdt/335357.md)
 
 11-18 [观人随笔｜真正的灾难，是一个社会走丢了反思能力](/articles/cdt/335359.md)
@@ -594,10 +600,4 @@
 10-11 [张3丰的世界｜历史中的遮蔽：你只是爱皇帝而已](/articles/cdt/336470.md)
 
 10-11 [风声OPINION｜经济复苏仍需要强力政策，建议直接发钱](/articles/cdt/336471.md)
-
-10-11 [导筒directube｜又是熟悉的全网下架](/articles/cdt/336473.md)
-
-10-11 [古老板的老巢｜对于股市暴跌，你需要对政府行为进行理解](/articles/cdt/336474.md)
-
-10-11 [亮见｜《阿Q外传》：重生之我在21世纪做网红](/articles/cdt/336476.md)
 
