--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-19 [【CDT网语】频发的无差别伤人事件，迅速被叫停的夜骑狂欢（2024年第6期）](/articles/cdt/335345.md)
+
 11-18 [每日一语 2024.11.18](/articles/cdt/335351.md)
 
 11-18 [四环青年｜村道新换井盖一碰就碎，劣质井盖哪来的？](/articles/cdt/335353.md)
@@ -598,6 +600,4 @@
 10-11 [读库老六｜我并不是不想进入股市](/articles/cdt/336467.md)
 
 10-11 [每日一语 2024.10.10](/articles/cdt/336469.md)
-
-10-11 [张3丰的世界｜历史中的遮蔽：你只是爱皇帝而已](/articles/cdt/336470.md)
 
