--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-19 [联合国将恢复海地援助航班](/articles/voa/1010933.md)
+
 11-19 [特朗普的“政府效率部”面临艰巨任务](/articles/voa/1010934.md)
 
 11-19 [习近平在二十国峰会上强调支持“全球南方”措施](/articles/voa/1010935.md)
@@ -598,6 +600,4 @@
 11-7 [世界领导人祝贺特朗普当选](/articles/voa/1011231.md)
 
 11-7 [异议人士抗议中国利用国际刑警进行跨国镇压](/articles/voa/1011232.md)
-
-11-7 [以色列对黎巴嫩发动致命空袭](/articles/voa/1011233.md)
 
