--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-19 [希腊计划提前偿还部分纾困债务](/articles/voa/1010932.md)
+
 11-19 [联合国将恢复海地援助航班](/articles/voa/1010933.md)
 
 11-19 [特朗普的“政府效率部”面临艰巨任务](/articles/voa/1010934.md)
@@ -598,6 +600,4 @@
 11-7 [特别检察官考虑在特朗普胜选后如何结束两项针对他的联邦案件](/articles/voa/1011230.md)
 
 11-7 [世界领导人祝贺特朗普当选](/articles/voa/1011231.md)
-
-11-7 [异议人士抗议中国利用国际刑警进行跨国镇压](/articles/voa/1011232.md)
 
