--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+11-19 [莫斯科：乌克兰使用美国的ATACMS导弹袭击俄罗斯](/articles/dw/1023651.md)
+
+11-19 [媒体：美司法部将施压谷歌出售Chrome](/articles/dw/1023652.md)
+
 11-19 [波罗的海通信电缆断裂 有人搞破坏？](/articles/dw/1023653.md)
 
 11-19 [客座评论：特朗普2.0对中国是否会超级强硬](/articles/dw/1023654.md)
@@ -596,8 +600,4 @@
 10-20 [卡玛拉·哈里斯 vs. 特朗普：在堕胎、以色列、俄乌等关键议题上各持何种立场？](/articles/dw/1023949.md)
 
 10-20 [译者贝茨：让德国读者了解中国文学](/articles/dw/1023950.md)
-
-10-20 [荷兰监狱迎倒闭潮 是否意味治安变好？](/articles/dw/1023951.md)
-
-10-20 [哈里斯 vs. 特朗普：在堕胎、以色列、俄乌等关键议题上各持何种立场？](/articles/dw/1023952.md)
 
