--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+11-19 [马克龙与习近平在G20峰会面晤](/articles/dw/1023649.md)
+
+11-19 [肖尔茨会见习近平：没有人应该生活在对邻国的恐惧中](/articles/dw/1023650.md)
+
 11-19 [莫斯科：乌克兰使用美国的ATACMS导弹袭击俄罗斯](/articles/dw/1023651.md)
 
 11-19 [媒体：美司法部将施压谷歌出售Chrome](/articles/dw/1023652.md)
@@ -596,8 +600,4 @@
 10-20 [普拉博沃正式就任印尼新总统](/articles/dw/1023947.md)
 
 10-20 [G7防长关切台海局势 台外交部发文致谢](/articles/dw/1023948.md)
-
-10-20 [卡玛拉·哈里斯 vs. 特朗普：在堕胎、以色列、俄乌等关键议题上各持何种立场？](/articles/dw/1023949.md)
-
-10-20 [译者贝茨：让德国读者了解中国文学](/articles/dw/1023950.md)
 
