--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-20 [常德小学外男子驾车撞向人群，致多名学生受伤](/articles/nyt/1042193.md)
+
 11-19 [特朗普的情报总监加巴德，俄罗斯人的“同志”？](/articles/nyt/1042194.md)
 
 11-19 [红薯有多健康？](/articles/nyt/1042195.md)
@@ -598,6 +600,4 @@
 8-9 [中国如何在技术领域建立优势？科研进步和巨额投资](/articles/nyt/1042491.md)
 
 8-9 [为何台积电难以在美国复制台湾工厂的成功](/articles/nyt/1042492.md)
-
-8-9 [单身女性生育权之争：中国法院裁定未婚女性无权冻卵](/articles/nyt/1042493.md)
 
