--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-20 [黎智英首度出庭自辯 否認鼓吹港獨：太瘋狂](/articles/dw/1023641.md)
+
 11-20 [G20現場：「聯巴制美」 習近平給川普下馬威？](/articles/dw/1023642.md)
 
 11-20 [为什么鱼在水中不会沉下去？](/articles/dw/1023643.md)
@@ -598,6 +600,4 @@
 10-21 [拥抱可以，但在这里最多三分钟](/articles/dw/1023939.md)
 
 10-21 [韩国指朝鲜派兵增援俄侵乌战争 北约回应](/articles/dw/1023940.md)
-
-10-21 [辛瓦尔之死对哈马斯、加沙和黎巴嫩意味着什么？](/articles/dw/1023941.md)
 
