--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-20 [对俄罗斯来说，核武器是最终的谈判筹码](/articles/nyt/1042191.md)
+
 11-20 [中国温室气体排放量飙升颠覆全球气候政治](/articles/nyt/1042192.md)
 
 11-20 [常德小学外男子驾车撞向人群，致多名学生受伤](/articles/nyt/1042193.md)
@@ -598,6 +600,4 @@
 8-12 [中国体育的“举国体制”改变了吗？](/articles/nyt/1042489.md)
 
 8-12 [沃尔兹，“中国人民的老朋友”还是对华鹰派？](/articles/nyt/1042490.md)
-
-8-9 [中国如何在技术领域建立优势？科研进步和巨额投资](/articles/nyt/1042491.md)
 
