--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-28 [德国大众汽车迫于国际压力出售其新疆有争议的车厂](/articles/voa/1010726.md)
+
+11-28 [梵蒂冈：教宗方济各接见和布道都将开始配备中文翻译](/articles/voa/1010727.md)
+
 11-28 [白宫与北京达成外交突破，互换在押人员，三位美国公民获释](/articles/voa/1010728.md)
 
 11-27 [中国防长董军传遭贪腐调查 网民追问:连续三任都进去吗?](/articles/voa/1010729.md)
@@ -596,8 +600,4 @@
 11-15 [预期美外交政策或将重大转变，中国敦促欧盟修复双边关系](/articles/voa/1011024.md)
 
 11-15 [经济困境造成切身痛苦，中国面临罕见暴力犯罪激增](/articles/voa/1011025.md)
-
-11-15 [叙利亚官媒：以色列对大马士革及郊区发动两次空袭，15人丧生](/articles/voa/1011026.md)
-
-11-15 [北约和欧盟督促中国帮助让朝鲜停止支持俄罗斯侵乌战争](/articles/voa/1011027.md)
 
