--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-28 [特朗普提名长期顾问、退役将军凯洛格出任乌俄事务特使](/articles/voa/1010724.md)
+
 11-28 [最新报告警告:中国若用AI进行跨国洗脑认知战 恐冲击民主国家国安](/articles/voa/1010725.md)
 
 11-28 [德国大众汽车迫于国际压力出售其新疆有争议的车厂](/articles/voa/1010726.md)
@@ -598,6 +600,4 @@
 11-15 [APEC外长会议秘鲁登场,美国盼推动与日韩三边伙伴关系制度化](/articles/voa/1011022.md)
 
 11-15 [前美国之音记者为抗议伊朗威权统治者在德黑兰自杀身亡](/articles/voa/1011023.md)
-
-11-15 [预期美外交政策或将重大转变，中国敦促欧盟修复双边关系](/articles/voa/1011024.md)
 
