--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-28 [中美换囚：三名美国人获释，一人曾为FBI线人](/articles/nyt/1042164.md)
+
 11-28 [价格战愈演愈烈，中国车企要求供应商降价](/articles/nyt/1042165.md)
 
 11-28 [大众汽车宣布退出新疆](/articles/nyt/1042166.md)
@@ -598,6 +600,4 @@
 8-20 [希拉里为贺锦丽站台：这次能否“打破玻璃天花板”？](/articles/nyt/1042462.md)
 
 8-20 [“加沙没有童年”，只有战火、恐惧和死亡](/articles/nyt/1042463.md)
-
-8-20 [《谎言的囚徒》：被中国监禁20年的中情局特工](/articles/nyt/1042464.md)
 
