--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-28 [国际刑事法院检察官请求对缅甸军政府领导人发逮捕令](/articles/voa/1010712.md)
+
 11-28 [物价压力仍顽固，美国通胀指标上扬](/articles/voa/1010713.md)
 
 11-28 [德情报主管：俄罗斯的破坏行动有可能导致北约动用第五条共同防御条款](/articles/voa/1010714.md)
@@ -598,6 +600,4 @@
 11-16 [石破茂习近平秘鲁相会 日中关系走向仍耐人寻味](/articles/voa/1011010.md)
 
 11-16 [中国人权律师丁家喜、维权人士张海涛获独立中文笔会颁奖 关切两人狱中处境](/articles/voa/1011011.md)
-
-11-16 [中国经济依然脆弱，特朗普因素给中国经济复苏蒙上阴影](/articles/voa/1011012.md)
 
