--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-28 [【404文库】个人记忆库｜WTO已死，CPTPP拒绝，我国外贸被卡死了？](/articles/cdt/335048.md)
+
 11-28 [青年志Youthology｜做一片安全、好用的卫生巾，很难吗？](/articles/cdt/335060.md)
 
 11-27 [关胖本胖｜封杀擦边冠军，激怒全国首富，字节的瓜越吃越大…](/articles/cdt/335066.md)
@@ -598,6 +600,4 @@
 10-21 [三联生活周刊｜一个三十四年汽车老将的“仗义执言”](/articles/cdt/336239.md)
 
 10-21 [基本常识｜亲生母亲卖孩子是个无解难题](/articles/cdt/336242.md)
-
-10-21 [情况有点复杂｜一家开业当天被端掉、被隐入地下的书店](/articles/cdt/336244.md)
 
