--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-28 [北京证实中央军委苗华停职接受调查 斥董军被查报道“造谣”](/articles/voa/1010708.md)
+
 11-28 [路透社：拜登准备向乌克兰提供价值7.25亿美元的新一批军援](/articles/voa/1010709.md)
 
 11-28 [特朗普称墨西哥同意阻止无证移民进入美国 辛鲍姆淡化其说法](/articles/voa/1010710.md)
@@ -598,6 +600,4 @@
 11-16 [中国核动力航母有谱？四川核反应堆原型曝光](/articles/voa/1011006.md)
 
 11-16 [香港三季度GDP环比收缩1.1%，旅游出口持续下滑](/articles/voa/1011007.md)
-
-11-16 [为台积电在美设厂奖励66亿美元！拜登政府赶在特朗普就职前签署最终协议](/articles/voa/1011008.md)
 
