--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-28 [应对兵凶战危？德国当局普查防空掩体](/articles/dw/1023564.md)
+
 11-28 [特朗普上任后北京还有更多经济刺激措施？](/articles/dw/1023565.md)
 
 11-28 [中共中央军委政治工作部主任苗华被查](/articles/dw/1023566.md)
@@ -598,6 +600,4 @@
 10-28 [大众汽车计划关闭德国三处工厂 员工面临裁员减薪](/articles/dw/1023862.md)
 
 10-28 [伊拉克抗议以色列侵犯其领空](/articles/dw/1023863.md)
-
-10-28 [伊拉克抗议以色列使用其领空攻击伊朗](/articles/dw/1023864.md)
 
