--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-28 [路透：卫星图像显示中国民兵船在菲控铁峙岛周边大量集结](/articles/voa/1010705.md)
+
+11-28 [美中落实换囚协议，中方证实三名获释中国公民已回国](/articles/voa/1010706.md)
+
 11-28 [赖清德首次元首外交出访 将过境美国夏威夷和关岛](/articles/voa/1010707.md)
 
 11-28 [北京证实中央军委苗华停职接受调查 斥董军被查报道“造谣”](/articles/voa/1010708.md)
@@ -596,8 +600,4 @@
 11-16 [布林肯与台湾APEC领袖代表林信义会晤，讨论美台经济合作](/articles/voa/1011003.md)
 
 11-16 [尹锡悦会晤习近平，称俄罗斯和朝鲜问题需要中国的合作](/articles/voa/1011004.md)
-
-11-16 [朔尔茨罕见与普京通话 泽连斯基：这会打开“潘多拉盒子”](/articles/voa/1011005.md)
-
-11-16 [中国核动力航母有谱？四川核反应堆原型曝光](/articles/voa/1011006.md)
 
