--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-29 [萝严肃｜她在“擦边”吗？](/articles/cdt/335031.md)
+
 11-29 [【CDT关注】“没有一条藏语评论，任何藏语的评论都发表不出来”（外二篇）](/articles/cdt/335036.md)
 
 11-28 [【旧文重温】谌旭彬｜皇上不喜欢好人抱成一团](/articles/cdt/335044.md)
@@ -598,6 +600,4 @@
 10-21 [亮见｜机关食堂为啥就没有臭肉？](/articles/cdt/336230.md)
 
 10-21 [有杏书店｜珍惜还在公共表达的人](/articles/cdt/336232.md)
-
-10-21 [马与人说｜你被街道办催孕了吗？](/articles/cdt/336235.md)
 
