--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-29 [北京證實中美換囚 中方換回國安部官員](/articles/dw/1023558.md)
+
 11-28 [大量中国民用船只在主权争议岛屿附近集结](/articles/dw/1023559.md)
 
 11-28 [数名特朗普内阁人选受炸弹威胁 FBI 介入调查](/articles/dw/1023560.md)
@@ -598,6 +600,4 @@
 10-29 [中国证实一名韩国男性因触犯《反间谍法》被捕](/articles/dw/1023856.md)
 
 10-29 [路透社：中国正考虑发行10万亿特别债券](/articles/dw/1023857.md)
-
-10-29 [川普 vs. 賀錦麗：中國偏好誰當選美國總統？](/articles/dw/1023858.md)
 
