--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-29 [风声OPINION｜用人单位只招“985”“211”，招聘歧视为何人人反感却被全社会接纳？](/articles/cdt/335024.md)
+
 11-29 [南风窗｜从高空坠落的杂技夫妻](/articles/cdt/335027.md)
 
 11-29 [每日一语 2024.11.28](/articles/cdt/335029.md)
@@ -598,6 +600,4 @@
 10-22 [律侠普法｜生育问题启动抽样调查：让年轻小伙敢结婚，让年轻女人敢怀孕](/articles/cdt/336220.md)
 
 10-22 [每日一语 2024.10.21](/articles/cdt/336225.md)
-
-10-21 [玖奌杂货店｜为什么他们不羞愧？](/articles/cdt/336228.md)
 
