--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-29 [中共官媒《光明日报》前评论部副主任董郁玉被以“间谍罪”判刑七年](/articles/voa/1010686.md)
+
 11-29 [世卫组织希望加强禽流感监测](/articles/voa/1010687.md)
 
 11-29 [格鲁吉亚民众抗议政府暂停欧盟申请至2028年](/articles/voa/1010688.md)
@@ -598,6 +600,4 @@
 11-16 [美中芯片战再升级? 专家:特朗普对华制裁恐扩及14纳米成熟制程](/articles/voa/1010984.md)
 
 11-16 [特朗普顾问拉英国优先处理美英贸易问题，伦敦则想脚踩美欧“两只船”](/articles/voa/1010985.md)
-
-11-16 [拜习会前夕 中国驻美大使称愿同美国“做伙伴、做朋友”](/articles/voa/1010986.md)
 
