--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-29 [中俄两军在日本海上空再次举行联合空中战略巡航](/articles/voa/1010680.md)
+
 11-29 [《国有器官》揭中国活摘器官遭炸弹恐吓 台湾不畏威胁如期播映](/articles/voa/1010681.md)
 
 11-29 [赖清德外访过境夏威夷关岛，北京吁美“慎之又慎”处理台湾问题](/articles/voa/1010682.md)
@@ -598,6 +600,4 @@
 11-17 [《华尔街日报》：TikTok母公司字节跳动在美国禁令的不确定中估值三千亿美元](/articles/voa/1010978.md)
 
 11-17 [香港自由委员会主席郭明瀚：英方应要求高官与黎智英见面 结束单独囚禁](/articles/voa/1010979.md)
-
-11-17 [中国学校发生持刀攻击事件，导致8死17伤](/articles/voa/1010980.md)
 
