--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+11-30 [中国表示“愿意同相关国家合作”查明海缆被切断事件](/articles/voa/1010670.md)
+
+11-30 [中国过剩商品涌入巴基斯坦 给当地市场和产业造成巨大压力](/articles/voa/1010671.md)
+
+11-30 [乌克兰敦促北约下周发出入盟邀请](/articles/voa/1010672.md)
+
+11-30 [叙利亚反政府武装及盟友夺取阿勒颇城部分控制权](/articles/voa/1010673.md)
+
 11-30 [美国谴责中国以间谍罪名将资深记者董郁玉判刑(声明全文)](/articles/voa/1010674.md)
 
 11-30 [立陶宛驱逐三名中国外交官](/articles/voa/1010675.md)
@@ -592,12 +600,4 @@
 11-18 [香港本周两起国安案庭审突显政治自由遭侵蚀有多严重](/articles/voa/1010968.md)
 
 11-17 [中国一周内两起骇人杀人要案，民众反省社会到底病在哪里？](/articles/voa/1010969.md)
-
-11-17 [习近平藉秘鲁“拜习会”释美中合作意愿，特朗普会照单全收吗?](/articles/voa/1010970.md)
-
-11-17 [“自由，我踏马来辣(啦)” 洛杉矶民主人士市区骑行，声援河南夜骑大学生](/articles/voa/1010971.md)
-
-11-17 [日本自卫队明年将与美国海军陆战队一起在澳大利亚训练](/articles/voa/1010972.md)
-
-11-17 [以色列军队深入黎巴嫩之际 闪光弹袭击内塔尼亚胡宅邸](/articles/voa/1010973.md)
 
