--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-30 [以色列僵局难解 沙特放弃寻求与美国达成防御条约](/articles/voa/1010662.md)
+
 11-30 [墨西哥当局突击查抄首都“义乌城”并誓言在全国打击假冒产品](/articles/voa/1010663.md)
 
 11-30 [加拿大总理特鲁多抵达佛罗里达州会晤当选总统特朗普](/articles/voa/1010664.md)
@@ -598,6 +600,4 @@
 11-18 [干旱状况持续，美国东北部大部分地区继续面临野火威胁](/articles/voa/1010960.md)
 
 11-18 [经过1000天的艰苦战争，俄罗斯进一步深入乌克兰](/articles/voa/1010961.md)
-
-11-18 [教宗方济各呼吁调查以色列对加沙的攻击是否构成“种族灭绝”](/articles/voa/1010962.md)
 
