--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+11-30 [美国再次批准对台出售战机军备](/articles/dw/1023548.md)
+
+11-30 [中国表示“愿意配合”波罗的海电缆切割事件调查](/articles/dw/1023549.md)
+
+11-30 [民调：大多数德国人支持澳洲式未成年人社媒禁令](/articles/dw/1023550.md)
+
 11-30 [客座評論：贏得冠軍的不是Chinese Taipei](/articles/dw/1023551.md)
 
 11-29 [解码中国：特朗普的威胁姿态](/articles/dw/1023552.md)
@@ -594,10 +600,4 @@
 10-30 [互呛“垃圾”美国选前两党攻击升级](/articles/dw/1023846.md)
 
 10-30 [德国经济第三季度出乎意料实现正增长](/articles/dw/1023847.md)
-
-10-30 [炸毁医院是战争罪吗？](/articles/dw/1023848.md)
-
-10-30 [汽车行业转型导致德国再减少14万工业岗位](/articles/dw/1023849.md)
-
-10-30 [美国选举人团制度再受瞩目  卡玛拉·哈里斯团队欲说还休](/articles/dw/1023850.md)
 
