--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-30 [基本常识｜仔细学习强迫劳动的定义后，我陷入了沉思](/articles/cdt/334998.md)
+
 11-30 [黑噪音｜经济危机，普通人是最后感受到的](/articles/cdt/335000.md)
 
 11-30 [【CDT报告汇】中国数字时代接受NHK采访，揭秘中国当局“认知作战”](/articles/cdt/335004.md)
@@ -598,6 +600,4 @@
 10-23 [竹不倒｜彻底不在乎吃相了？普通人老百姓瑟瑟发抖](/articles/cdt/336166.md)
 
 10-24 [【404文库】“欠薪问题一直是一个顽疾，为什么总是解决不了这个问题？”（外二篇）](/articles/cdt/336171.md)
-
-10-23 [念个咒语会下雨｜普信男无法容忍杨笠的冒犯，却可以接受刘强东性侵](/articles/cdt/336175.md)
 
