--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+12-1 [赖清德访邦交国过境夏威夷 引北京强烈反应](/articles/dw/1023544.md)
+
+11-30 [德国社民党启动选战  民意调查有所回暖](/articles/dw/1023545.md)
+
 11-30 [朝鲜誓言挺俄 泽连斯基暗示可结束“热战”但有前提](/articles/dw/1023546.md)
 
 11-30 [德国货车司机奇缺 企业国外招工](/articles/dw/1023547.md)
@@ -596,8 +600,4 @@
 10-30 [媒体：北京要求车商暂缓在支持关税国家大举投资](/articles/dw/1023842.md)
 
 10-30 [加拿大指控莫迪副手牵涉锡克教人士遇刺案](/articles/dw/1023843.md)
-
-10-30 [互呛“垃圾”攻击升级 拜登帮倒忙](/articles/dw/1023844.md)
-
-10-30 [中科院领导访德 德中科研合作存争议](/articles/dw/1023845.md)
 
