--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-1 [叙利亚政府军蒙受重大挫败：反政府武装已进入叙北部最大城市阿勒颇](/articles/voa/1010655.md)
+
 11-30 [亲欧盟格鲁吉亚民众抗议示威持续，当局称又逮捕100多名示威者](/articles/voa/1010656.md)
 
 11-30 [赖清德启程出访，强调台湾是促进全球和平稳定的关键力量](/articles/voa/1010657.md)
@@ -598,6 +600,4 @@
 11-18 [荷兰外相：中俄贸易助推战争，直接影响欧洲安全](/articles/voa/1010953.md)
 
 11-18 [赖清德：台湾欲与欧盟打造更强健“民主保护伞”并洽签“经济伙伴协定”](/articles/voa/1010954.md)
-
-11-18 [聿文视界：混合战术——北京应对特朗普关税战的可能打法](/articles/voa/1010955.md)
 
