--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-1 [台湾总统过境美国之际，美日菲拟连手防止中国趁机扰台](/articles/voa/1010642.md)
+
 12-1 [叙利亚反对派控制阿勒颇后持续推进 俄罗斯发动袭击支持阿萨德](/articles/voa/1010643.md)
 
 12-1 [台湾总统赖清德过境夏威夷 参访急难管理署与亚利桑那战舰](/articles/voa/1010644.md)
@@ -598,6 +600,4 @@
 11-19 [巴西G20峰会,拜登总统宣布“历史性”40亿美元援助贫困国家](/articles/voa/1010940.md)
 
 11-19 [联合国安理会呼吁对加沙紧急援助](/articles/voa/1010941.md)
-
-11-19 [五角大楼拒绝克里姆林宫对美国助长乌克兰升级的批评](/articles/voa/1010942.md)
 
