--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-1 [拜登总统启程访问非洲，努力抗衡中国影响力](/articles/voa/1010641.md)
+
 12-1 [台湾总统过境美国之际，美日菲拟连手防止中国趁机扰台](/articles/voa/1010642.md)
 
 12-1 [叙利亚反对派控制阿勒颇后持续推进 俄罗斯发动袭击支持阿萨德](/articles/voa/1010643.md)
@@ -598,6 +600,4 @@
 11-19 [中国政府打压境内书店之际，中文书商在海外拓展事业](/articles/voa/1010939.md)
 
 11-19 [巴西G20峰会,拜登总统宣布“历史性”40亿美元援助贫困国家](/articles/voa/1010940.md)
-
-11-19 [联合国安理会呼吁对加沙紧急援助](/articles/voa/1010941.md)
 
