--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-2 [美国安全官员：以哈停火目前“更有可能”](/articles/voa/1010636.md)
+
+12-2 [白宫国家安全顾问沙利文:美国不会将核武器还给乌克兰](/articles/voa/1010637.md)
+
 12-2 [叙利亚政府军反攻，试图阻止反对派武装继续推进](/articles/voa/1010638.md)
 
 12-2 [“西方买单中国污染” 中国是否能在特朗普时代主导全球气候议题？](/articles/voa/1010639.md)
@@ -596,8 +600,4 @@
 11-19 [特朗普的“政府效率部”面临艰巨任务](/articles/voa/1010934.md)
 
 11-19 [习近平在二十国峰会上强调支持“全球南方”措施](/articles/voa/1010935.md)
-
-11-19 [美国众议院道德委员会将考虑发布关于特朗普司法部长提名人的报告](/articles/voa/1010936.md)
-
-11-19 [从珠海航展到台海战备“镧影R6000”无人机的军事潜力](/articles/voa/1010937.md)
 
