--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-2 [总理无视美国谴责之际 抗议活动在格鲁吉亚全国蔓延](/articles/voa/1010629.md)
+
 12-2 [尽管曾誓言不会，拜登在卸任前仍赦免了其子亨特](/articles/voa/1010630.md)
 
 12-2 [拜登纪念世界艾滋病日 白宫草坪上展示艾滋病纪念被](/articles/voa/1010631.md)
@@ -598,6 +600,4 @@
 11-20 [普京签署法令批准新版核战略，莫斯科称乌军对俄发射美制远程导弹](/articles/voa/1010927.md)
 
 11-20 [菲律宾总统马科斯：他和特朗普通了话，两人将很快会面](/articles/voa/1010928.md)
-
-11-19 [社会到底怎么了？湖南常德再爆小学门口驾车冲撞恶性案](/articles/voa/1010929.md)
 
