--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-2 [特朗普批拜登外交“差劲”，但可能延续其政策](/articles/nyt/1042154.md)
+
 12-2 [美国谴责中国重判记者董郁玉，呼吁“立即无条件释放”](/articles/nyt/1042155.md)
 
 12-2 [赖清德出访太平洋三国，将过境夏威夷和关岛](/articles/nyt/1042156.md)
@@ -598,6 +600,4 @@
 8-23 [尼泊尔新总理推翻TikTok禁令，向中国示好](/articles/nyt/1042452.md)
 
 8-23 [对女性最危险的国度？印度女医生遭奸杀案再次引发愤怒](/articles/nyt/1042453.md)
-
-8-22 [如何击败特朗普？贺锦丽和民主党找到了新策略](/articles/nyt/1042454.md)
 
