--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-2 [倪刃｜吴柳芳没病，是这个社会病了](/articles/cdt/334956.md)
+
 12-2 [木白文笔平平｜因为评论银行取款难的问题，南方系媒体又被骂](/articles/cdt/334968.md)
 
 12-2 [水瓶纪元｜汕头店家关门躲“国检”：“有影”还是“无影”？](/articles/cdt/334970.md)
@@ -598,6 +600,4 @@
 10-25 [唐师三百手｜被杨笠脱口秀表演整破防的90后，心中充满仇恨](/articles/cdt/336118.md)
 
 10-25 [萝严肃｜继续支持杨笠，支持女性脱口秀，做出我们的选择](/articles/cdt/336121.md)
-
-10-25 [风声OPINION｜杨笠事件：京东应该认怂吗？](/articles/cdt/336123.md)
 
