--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-2 [【404文库】与市场共舞｜经济学家付鹏在HSBC演讲速记](/articles/cdt/334953.md)
+
 12-2 [倪刃｜吴柳芳没病，是这个社会病了](/articles/cdt/334956.md)
 
 12-2 [木白文笔平平｜因为评论银行取款难的问题，南方系媒体又被骂](/articles/cdt/334968.md)
@@ -598,6 +600,4 @@
 10-25 [每日一语 2024.10.24](/articles/cdt/336104.md)
 
 10-25 [唐师三百手｜被杨笠脱口秀表演整破防的90后，心中充满仇恨](/articles/cdt/336118.md)
-
-10-25 [萝严肃｜继续支持杨笠，支持女性脱口秀，做出我们的选择](/articles/cdt/336121.md)
 
