--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-2 [聿文视界：解放军再震，中共走不出的死循环](/articles/voa/1010626.md)
+
 12-2 [罗马尼亚左派在议会选举中领先崛起的极右翼](/articles/voa/1010627.md)
 
 12-2 [战争与地区冲突不断 全球100强军火商销售量提升](/articles/voa/1010628.md)
@@ -598,6 +600,4 @@
 11-20 [中国企业在津巴布韦被控虐待当地劳工](/articles/voa/1010924.md)
 
 11-20 [2024年世界顶级企业撤离中国的速度持续加快，首选目的地并非美国](/articles/voa/1010925.md)
-
-11-20 [泽连斯基：朝鲜向俄罗斯派兵有可能增加到十万人](/articles/voa/1010926.md)
 
