--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+12-2 [这个冬天有点冷 欧洲再次为天然气发愁](/articles/dw/1023533.md)
+
+12-2 [德国外长批评中国军援俄罗斯损害欧洲核心利益](/articles/dw/1023534.md)
+
 12-2 [外交官被逐：中国威胁立陶宛或采取反制](/articles/dw/1023535.md)
 
 12-2 [肖尔茨访问乌克兰并承诺新一轮军援](/articles/dw/1023536.md)
@@ -596,8 +600,4 @@
 10-31 [美国公布涉俄制裁新名单 中国印度公司榜上有名](/articles/dw/1023831.md)
 
 10-31 [中国制造业PMI回升 经济学家乐观看待](/articles/dw/1023832.md)
-
-10-31 [比亚迪季度营收首次超过特斯拉](/articles/dw/1023833.md)
-
-10-31 [人权捍卫者许志永狱中绝食20余天，健康状况恶化](/articles/dw/1023834.md)
 
