--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+12-2 [尼泊尔提出“一带一路”新框架 总理奥利上任后首访北京](/articles/dw/1023530.md)
+
+12-2 [美國公佈新一輪對華半導體出口管制 140家中企被列入清单](/articles/dw/1023531.md)
+
 12-2 [反对减薪裁员 大众汽车德国工人举行大罢工](/articles/dw/1023532.md)
 
 12-2 [这个冬天有点冷 欧洲再次为天然气发愁](/articles/dw/1023533.md)
@@ -596,8 +600,4 @@
 11-1 [北韓將參與俄烏戰事 美籲中國出手阻止](/articles/dw/1023828.md)
 
 11-1 [中国对白兰地下手 法国生产商艰难苦撑](/articles/dw/1023829.md)
-
-11-1 [欧委会对“海外版拼多多”Temu启动调查](/articles/dw/1023830.md)
-
-10-31 [美国公布涉俄制裁新名单 中国印度公司榜上有名](/articles/dw/1023831.md)
 
