--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-3 [赖清德过境夏威夷与佩洛西通话，讨论中国军事威胁](/articles/voa/1010623.md)
+
 12-2 [美出台第三波对华半导体出口禁限措施，重点打击半导体设备制造商](/articles/voa/1010624.md)
 
 12-2 [矮化台湾? 中国高校师生参访团成员贺“中国台北队”夺世棒赛冠军犯众怒](/articles/voa/1010625.md)
@@ -598,6 +600,4 @@
 11-20 [海外蒙古人欢迎美国国会推出南蒙古人权法案](/articles/voa/1010921.md)
 
 11-20 [中国官媒记者遭打 媒体监督权与公众知情权成梦想？](/articles/voa/1010922.md)
-
-11-20 [香港民主派初选案45罪成被告判监4年两月至10年，陈宝莹指冤狱一天都不该](/articles/voa/1010923.md)
 
