--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-3 [古巴革命领导人劳尔·卡斯特罗、古巴国家主席迪亚斯-卡内尔会见中国国务委员王小洪](/articles/voa/1010620.md)
+
+12-3 [菲律宾总统对俄潜艇出现在菲专属经济区海域表示“非常忧虑”](/articles/voa/1010621.md)
+
 12-3 [特朗普连挥关税大棒 分析：中国恐缺乏有效应对策略](/articles/voa/1010622.md)
 
 12-3 [赖清德过境夏威夷与佩洛西通话，讨论中国军事威胁](/articles/voa/1010623.md)
@@ -596,8 +600,4 @@
 11-20 [中国和巴基斯坦举行五年来的首次反恐演习](/articles/voa/1010918.md)
 
 11-20 [中国大学生毕业人数将达1222万 高失业率与学历内卷加剧社会焦虑](/articles/voa/1010919.md)
-
-11-20 [美国务院声明：强烈谴责香港将45名民主派人士判刑，对多名香港官员实施签证限制](/articles/voa/1010920.md)
-
-11-20 [海外蒙古人欢迎美国国会推出南蒙古人权法案](/articles/voa/1010921.md)
 
