--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-3 [跨性别律师将在美最高法院辩说，挑战针对未成年人的医疗保健禁令](/articles/voa/1010602.md)
+
+12-3 [特朗普周末将出席巴黎圣母院重开仪式](/articles/voa/1010603.md)
+
 12-3 [拜登寻求额外240亿美元拨款支持乌克兰、补充美国武器库存](/articles/voa/1010604.md)
 
 12-3 [特朗普关税威胁引发加拿大和墨西哥在边境安全问题上的分歧](/articles/voa/1010605.md)
@@ -596,8 +600,4 @@
 11-20 [中国重夺对太平洋岛国第二大捐助国地位 强力输出影响力](/articles/voa/1010900.md)
 
 11-20 [东南亚国家防长在老挝举行会议 中国拒绝与美国防长会面](/articles/voa/1010901.md)
-
-11-20 [巴基斯坦军方将对分离主义武装分子展开新一轮攻势](/articles/voa/1010902.md)
-
-11-20 [“全球南方”为特朗普上台做准备 习近平会晤阿根廷与巴西总统](/articles/voa/1010903.md)
 
