--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-3 [法塔赫与哈马斯达成协议组建战后加沙管理机构](/articles/voa/1010598.md)
+
+12-3 [报复美国限制半导体对华出口新举措，北京禁止对美出口关键稀有矿物质](/articles/voa/1010599.md)
+
 12-3 [北约外长会议聚焦在对乌克兰的支持](/articles/voa/1010600.md)
 
 12-3 [格鲁吉亚警方再次驱散抗议欧盟谈判暂停的人群](/articles/voa/1010601.md)
@@ -596,8 +600,4 @@
 11-21 [俄乌相互发动大规模无人机攻击，美将向乌提供反步兵地雷](/articles/voa/1010896.md)
 
 11-21 [俄乌战争给欧洲国防工业企业带来巨大红利](/articles/voa/1010897.md)
-
-11-20 [专家预期：特朗普一上任对华关税将升至40%，导致中国GDP下降一个百分点](/articles/voa/1010898.md)
-
-11-20 [特朗普第二任期有望彻底赢得美中战略竞争?](/articles/voa/1010899.md)
 
