--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+12-4 [抨击《布达佩斯备忘录》 乌克兰称唯一安全保障是加入北约](/articles/dw/1023519.md)
+
+12-3 [特朗普称将“阻止”新日铁收购美国钢铁公司](/articles/dw/1023520.md)
+
+12-3 [印度希望审慎恢复对华经贸关系](/articles/dw/1023521.md)
+
 12-3 [韩国总统尹锡悦宣布紧急戒严令](/articles/dw/1023522.md)
 
 12-3 [报复美国新一轮芯片战  中国收紧出口管制](/articles/dw/1023523.md)
@@ -594,10 +600,4 @@
 11-2 [流行歌手带动文化现象“brat”成为柯林斯词典年度热词](/articles/dw/1023817.md)
 
 11-1 [德国宣布关闭伊朗驻德领事馆 伊朗强烈抗议](/articles/dw/1023818.md)
-
-11-1 [2024年美国大选结果对德国有何影响？](/articles/dw/1023819.md)
-
-11-1 [南京大屠杀87周年 上海日本人学校将改上网课](/articles/dw/1023820.md)
-
-11-1 [欧日签署安全与防务伙伴关系协议](/articles/dw/1023821.md)
 
