--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-4 [韩国总统戒严令全文：](/articles/voa/1010594.md)
+
 12-4 [德外长指控中国军援俄罗斯 北京为何收起“战狼式”反应?](/articles/voa/1010595.md)
 
 12-4 [印中边界军事对峙化解后，新德里表示准备考虑发展双边经贸关系](/articles/voa/1010596.md)
@@ -598,6 +600,4 @@
 11-21 [波罗的海两条海底电缆疑遭人为破坏，一艘中国货船受到丹麦海军监视](/articles/voa/1010892.md)
 
 11-21 [防范“潜在重大空袭”，美国关闭驻基辅大使馆，告诫美公民注意躲避空袭](/articles/voa/1010893.md)
-
-11-21 [香港传媒大亨黎智英国安案首次亲自出庭作供 市民连日通宵排队旁听支持](/articles/voa/1010894.md)
 
