--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+12-14 [马克龙任命新总理 穆迪下调法国主权信用评级](/articles/dw/1023397.md)
+
+12-14 [韩国国会通过尹锡悦弹劾案](/articles/dw/1023398.md)
+
 12-14 [俄罗斯在叙利亚的军事基地：撤离还是等待？](/articles/dw/1023399.md)
 
 12-14 [韩国持续动荡 平壤反应迟缓](/articles/dw/1023400.md)
@@ -596,8 +600,4 @@
 11-15 [肖尔茨可能最后一次以联邦总理身份见习近平](/articles/dw/1023695.md)
 
 11-15 [挪威冰川融化对考古学家是一幸事？](/articles/dw/1023696.md)
-
-11-15 [研究：德国人对民主满意度创新低 排外氛围升高](/articles/dw/1023697.md)
-
-11-15 [APEC秘鲁峰会召开 最后一次“拜习会”将登场](/articles/dw/1023698.md)
 
