--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-14 [快讯：韩国国会通过总统尹锡悦弹劾案](/articles/voa/1010316.md)
+
 12-14 [软外交抗衡中国影响力 巴布亚新几内亚加入澳大利亚橄榄球联赛](/articles/voa/1010317.md)
 
 12-14 [台湾一贯道信徒在中国被逮 台湾海基会吁台北市长蒋万安在双城论坛表达关切](/articles/voa/1010318.md)
@@ -598,6 +600,4 @@
 12-3 [罗马尼亚宪法法院在重新计票后确认第一轮总统选举有效](/articles/voa/1010614.md)
 
 12-3 [以色列-真主党停火基本维持，但一些战斗仍在继续](/articles/voa/1010615.md)
-
-12-3 [马来西亚犯罪率飙升，中国免签政策成关注焦点](/articles/voa/1010616.md)
 
