--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-15 [【重温】“与党国斗，与权贵斗，其乐无穷”——2021年度人物：编程随想](/articles/cdt/334570.md)
+
+12-15 [seven说｜女硕士被“收留”事件，现实版的田螺姑娘](/articles/cdt/334572.md)
+
+12-15 [凤凰WEEKLY｜手心写“王”字的他，终被弹劾](/articles/cdt/334574.md)
+
 12-15 [每日一语 2024.12.14](/articles/cdt/334576.md)
 
 12-15 [【网络民议】惊叹于韩国新闻工作者的团结与魄力 也苦笑于我们没有如此精神 声音已被消失](/articles/cdt/334580.md)
@@ -594,10 +600,4 @@
 11-8 [一个生物狗的科普小园｜特朗普2.0对美国健康的威胁：反疫苗急先锋RFK的反智反科学将让美国“生病”](/articles/cdt/335679.md)
 
 11-9 [岚目｜美国大选落幕：不止于输赢的十六点观察](/articles/cdt/335680.md)
-
-11-9 [太阳照常升起｜民主党为何会失败？](/articles/cdt/335681.md)
-
-11-8 [张3丰的世界｜更清晰了：传统新闻业正在解体](/articles/cdt/335683.md)
-
-11-8 [三表龙门阵｜瑞士卷：如何与黄色新闻共处](/articles/cdt/335685.md)
 
