--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-15 [叙利亚内战方休 东突厥斯坦战士调转枪头指向中国](/articles/voa/1010296.md)
+
 12-15 [日本外相拟本月下旬访问中国 再次要求履行水产品进口](/articles/voa/1010297.md)
 
 12-15 [路透：俄罗斯正从叙利亚撤军但不会完全撤出](/articles/voa/1010298.md)
@@ -598,6 +600,4 @@
 12-4 [韩国总统戒严令全文：](/articles/voa/1010594.md)
 
 12-4 [德外长指控中国军援俄罗斯 北京为何收起“战狼式”反应?](/articles/voa/1010595.md)
-
-12-4 [印中边界军事对峙化解后，新德里表示准备考虑发展双边经贸关系](/articles/voa/1010596.md)
 
