--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 12-16 [往事与随想｜你指望卜小花在低福利的石叠村能得到什么？](/articles/cdt/334550.md)
 
+12-16 [【CDT报告汇】ATMOS：气候活动家对新疆太阳能电厂赞不绝口却对维吾尔人权问题视而不见（外二篇）](/articles/cdt/334560.md)
+
 12-15 [【重温】“与党国斗，与权贵斗，其乐无穷”——2021年度人物：编程随想](/articles/cdt/334570.md)
 
 12-15 [seven说｜女硕士被“收留”事件，现实版的田螺姑娘](/articles/cdt/334572.md)
@@ -598,6 +600,4 @@
 11-9 [【404文库】衣者褚｜难道李佩霞案幕后还有更耸人听闻的事？](/articles/cdt/335672.md)
 
 11-9 [旧闻评论｜张雪峰配享太庙，新闻人奋起驱魔|舆论手札](/articles/cdt/335674.md)
-
-11-9 [图拉的精神食粮｜这三年，我如何在中国媒体做记者](/articles/cdt/335675.md)
 
