--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-16 [基辅在莫斯科轰炸后进行反击，乌克兰无人机袭击俄罗斯车臣地区](/articles/voa/1010289.md)
+
+12-16 [中国培训肯尼亚国营媒体记者意图何在？](/articles/voa/1010290.md)
+
 12-16 [联合国特使呼吁解除制裁，帮助叙利亚重建](/articles/voa/1010291.md)
 
 12-16 [特朗普对TikTok会手下留情？他提名的对华鹰派高官未必赞同](/articles/voa/1010292.md)
@@ -596,8 +600,4 @@
 12-4 [南中国海对峙升级之际 亲中假新闻席卷菲律宾](/articles/voa/1010587.md)
 
 12-4 [尹锡悦政府取消戒严令](/articles/voa/1010588.md)
-
-12-4 [韩国深夜出现短暂全国戒严，中国网民冷嘲热讽](/articles/voa/1010589.md)
-
-12-4 [拜登访问非洲以抗衡中国的主导地位](/articles/voa/1010590.md)
 
