--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-16 [台湾国安官员赴美与特朗普过渡团队会面 学者：为将来谈判做准备](/articles/voa/1010288.md)
+
 12-16 [基辅在莫斯科轰炸后进行反击，乌克兰无人机袭击俄罗斯车臣地区](/articles/voa/1010289.md)
 
 12-16 [中国培训肯尼亚国营媒体记者意图何在？](/articles/voa/1010290.md)
@@ -598,6 +600,4 @@
 12-4 [短命的戒严：韩国到底发生了什么？](/articles/voa/1010586.md)
 
 12-4 [南中国海对峙升级之际 亲中假新闻席卷菲律宾](/articles/voa/1010587.md)
-
-12-4 [尹锡悦政府取消戒严令](/articles/voa/1010588.md)
 
