--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -61,6 +61,8 @@
 
 12-13 [【404文库】“老板心情不好，今日店休；怕鬼，今天休息”（外二篇）](/articles/cdt/334683.md)
 
+12-16 [【年终专题】“中文互联网上的内容每年都以断崖式的速度在锐减”……2024年度404文章](/articles/cdt/334684.md)
+
 12-12 [古老板的老巢｜连出昏招！广州怎么了？](/articles/cdt/334688.md)
 
 12-12 [【年终专题】“13条生命换不来1条热搜”……2024年度“每日一语”](/articles/cdt/334693.md)
@@ -598,6 +600,4 @@
 11-9 [每日一语 2024.11.7](/articles/cdt/335666.md)
 
 11-9 [【404文库】衣者褚｜难道李佩霞案幕后还有更耸人听闻的事？](/articles/cdt/335672.md)
-
-11-9 [旧闻评论｜张雪峰配享太庙，新闻人奋起驱魔|舆论手札](/articles/cdt/335674.md)
 
