--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-16 [习近平新号召：“刀刃向内”消灭腐败](/articles/voa/1010280.md)
+
 12-16 [联合国将召集专家 试图解决利比亚政治僵局](/articles/voa/1010281.md)
 
 12-16 [泽连斯基宣布拟提供叙利亚粮食援助](/articles/voa/1010282.md)
@@ -598,6 +600,4 @@
 12-4 [台湾总统赖清德访问太平洋盟友图瓦卢](/articles/voa/1010578.md)
 
 12-4 [韩国戒严令或导致朝鲜误判而妄动的风险上升](/articles/voa/1010579.md)
-
-12-4 [美军在叙利亚进行“自卫”打击](/articles/voa/1010580.md)
 
