--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-16 [加沙卫生部称，以哈战争已造成45,000人死亡](/articles/voa/1010278.md)
+
 12-16 [韩国宪法法院开始审核尹锡悦弹劾案](/articles/voa/1010279.md)
 
 12-16 [习近平新号召：“刀刃向内”消灭腐败](/articles/voa/1010280.md)
@@ -598,6 +600,4 @@
 12-4 [菲律宾海警:中国在斯卡伯勒浅滩附近采取“咄咄逼人的行动”](/articles/voa/1010576.md)
 
 12-4 [拜登卸任前重拳出击中国AI软肋 特朗普对中国的科技封控或更强硬](/articles/voa/1010577.md)
-
-12-4 [台湾总统赖清德访问太平洋盟友图瓦卢](/articles/voa/1010578.md)
 
