--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-16 [首批“地表最强”M1A2T坦克抵台，将如何提升台湾战力？](/articles/voa/1010274.md)
+
 12-16 [挪威宣布向乌克兰提供2.42亿美元的军事援助](/articles/voa/1010275.md)
 
 12-16 [菲律宾参议院批准极具战略意义的菲日部队《相互准入协议》](/articles/voa/1010276.md)
@@ -598,6 +600,4 @@
 12-4 [中菲船只再次爆发水炮与侧撞冲突 两国相互指责](/articles/voa/1010572.md)
 
 12-4 [戒严令冲击韩股收跌1.4% 亚股普遍下跌](/articles/voa/1010573.md)
-
-12-4 [传中国拟军演报复赖清德过境美国 台湾陆委会：让两岸关系渐行渐远](/articles/voa/1010574.md)
 
