--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-17 [联邦议院不再信任肖尔茨 德国正式吹响大选的号角](/articles/dw/1023368.md)
+
 12-17 [联邦议院不再信任肖尔茨 德国大选的号角正式吹响](/articles/dw/1023369.md)
 
 12-16 [路透社：特朗普计划削减对电动车支持并对全球电池材料征税](/articles/dw/1023370.md)
@@ -598,6 +600,4 @@
 11-18 [德国指中国助俄罗斯生产无人机 贝尔博客:“必将引来后果“](/articles/dw/1023666.md)
 
 11-18 [特朗普2.0对中国是否会超级强硬](/articles/dw/1023667.md)
-
-11-18 [客座评论：报复社会何时休？](/articles/dw/1023668.md)
 
