--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-17 [即将离任的美驻华大使伯恩斯为美中关系留下了什么？](/articles/voa/1010265.md)
+
+12-17 [威斯康星州一私立基督教会学校发生枪击案，导致五死多伤](/articles/voa/1010266.md)
+
 12-17 [年终报道: 中欧关系在冷风中摇摆](/articles/voa/1010267.md)
 
 12-17 [美军空袭叙利亚境内伊斯兰国组织，打死12名武装分子](/articles/voa/1010268.md)
@@ -596,8 +600,4 @@
 12-5 [美国在台协会处长谷立言：中国是台湾与国际互联互通的最大挑战](/articles/voa/1010563.md)
 
 12-5 [底气不足，中共党媒开始为经济增长不能达标营造舆论](/articles/voa/1010564.md)
-
-12-5 [英国港人集会被掷饮料 英警方指证据不足 不检控华裔袭击者](/articles/voa/1010565.md)
-
-12-5 [台湾学生抗议中国高校师生团 强调“拒绝中国统战，呼吁平等交流”](/articles/voa/1010566.md)
 
