--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-17 [拜登政府准备对中国老式芯片展开贸易调查](/articles/nyt/1042104.md)
+
 12-17 [德国执政联盟瓦解，欧洲危机进一步加深](/articles/nyt/1042105.md)
 
 12-17 [尹锡悦被弹劾，美韩同盟或成牺牲品](/articles/nyt/1042106.md)
@@ -598,6 +600,4 @@
 9-9 [美国是时候加大对核武库的投资了](/articles/nyt/1042402.md)
 
 9-9 [“一个时代的终结”：中国不再允许外国家庭收养中国儿童](/articles/nyt/1042403.md)
-
-9-6 [当发出声音都不被允许：塔利班新法令阿富汗女性绝望](/articles/nyt/1042404.md)
 
