--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-17 [国际劳工组织：全球经济中移民作用至关重要](/articles/voa/1010253.md)
+
 12-17 [法官驳回特朗普撤销封口费定罪的请求](/articles/voa/1010254.md)
 
 12-17 [美军方是否对不明无人机出没问题秘而不报？特朗普与五角大楼针锋相对](/articles/voa/1010255.md)
@@ -598,6 +600,4 @@
 12-5 [VOA独家：众议长约翰逊与台湾总统赖清德通话](/articles/voa/1010551.md)
 
 12-5 [美国参议员听取中国盐台风电信黑客攻击情况汇报后誓言采取行动](/articles/voa/1010552.md)
-
-12-5 [布林肯：乌克兰必须就动员前线部队做出艰难但必要的决定](/articles/voa/1010553.md)
 
