--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-17 [林樾读书｜发明“恶意讨薪”一词的人大代表李宝忠，被列入失信执行人名单](/articles/cdt/334482.md)
+
 12-17 [【翻车现场】“生产升、需求增、就业稳、市场暖、质量优”](/articles/cdt/334490.md)
 
 12-17 [【网络民议】“缯帛缠树”不是亡国之兆么？](/articles/cdt/334495.md)
@@ -598,6 +600,4 @@
 11-11 [老萧杂说｜面对大学生扎堆骑行，我们应当思考些什么](/articles/cdt/335613.md)
 
 11-11 [【404文库】大象公社｜你没看错，临时出门证制度回来了……](/articles/cdt/335616.md)
-
-11-11 [【404文库】成都客｜开封，2024年深秋的首都](/articles/cdt/335621.md)
 
