--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-18 [受特朗普胜选影响，中国资本市场11月资金外流创历史新高](/articles/voa/1010241.md)
+
 12-17 [菲律宾向南中国海争议海域坐滩军舰运送补给品，未遭中方舰船阻拦](/articles/voa/1010242.md)
 
 12-17 [中国向埃及出售电子战系统 分析: 中国在下一盘大棋](/articles/voa/1010243.md)
@@ -598,6 +600,4 @@
 12-5 [习近平视察军队强调三个“绝对”，董军现身上海引起外界兴趣](/articles/voa/1010539.md)
 
 12-5 [海外港人在台北发布《自由香港宣言》 誓言灭共并筹组香港议会](/articles/voa/1010540.md)
-
-12-5 [赖清德与美众议院议长通话，北京不满称发出错误信号](/articles/voa/1010541.md)
 
